# AppBuilder

./: .gitignore  main.py  note.ipynb  pyproject.toml  start.bat
backend/: main.py  projects.json  requirements.txt  settings.json
frontend/: app.js  app_v7.js  index.html  style.css
