[project]
name = "video-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.104.1",
    "gtts==2.5.1",
    "moviepy==1.0.3",
    "numpy>=2.5.0",
    "pydub==0.25.1",
    "python-multipart==0.0.6",
    "transformers>=5.12.1",
    "uvicorn==0.24.0",
]
